# infotainment

./: CMakeLists.txt  README.md  main.cpp  resources.qrc  systeminfo.cpp  systeminfo.h
qml/: Main.qml
